# revelation-mobile-midi-to-mml

./: .gitmodules  Cargo.toml  LICENSE  PRIVACY.md  README.md  commit.sh  env.sh  test
.github/workflows/: build_and_release.yml  build_windows_msix.yml  dev.yml
README/: DONATE.md  README-vi.md
assets/: FIRE_BIRD_(full_ver_)_(BanG_Dream!_Roselia_9th_Single)_(piano_cover).mid  My_Neighbor_Totoro_-_Joe_Hisaishi1900_followers_SP.mid  Stay_With_Me_-_Miki_Matsubara.mid  Yorushika - Rain with Cappuccino.mid  cloudless-yorushika.mid  heart_beat-band.mid  hishokunosora.mid
cui/: Cargo.toml  TODO.md
cui/src/: app.rs  commands.rs  lib.rs  main.rs  types.rs  utils.rs
flutter_gui/: README.md  pubspec.yaml
flutter_gui/integration_test/: simple_test.dart
flutter_gui/lib/: main.dart
flutter_gui/linux/: CMakeLists.txt  my_application.cc
flutter_gui/rust/: Cargo.toml
flutter_gui/web/: index.html  manifest.json
flutter_gui/windows/: CMakeLists.txt
gui/: .gitignore  CHANGELOG.md  README.md  TODO.md  distribute_options.yaml  pubspec.yaml
gui/android/: gradle.properties  settings.gradle
gui/lib/: command_signals.dart  controller.dart  main.dart  toast_signals.dart  utils.dart
gui/linux/: CMakeLists.txt  my_application.cc
gui/messages/: commands.proto  dart_to_rust.proto  rust_to_dart.proto  types.proto
gui/native/hub/: Cargo.toml  cargokit.yaml
gui/native/hub/src/: commands.rs  converter.rs  error.rs  lib.rs  logger.rs  logging.rs  player.rs  signal_bridge.rs  signal_converter.rs  song.rs  state.rs  utils.rs
gui/native/hub/src/actors/: common.rs  mod.rs  player.rs  song.rs
gui/native/hub/src/signals/: error.rs  logging.rs  mod.rs  player.rs  song.rs
gui/test/: widget_test.dart
gui/web/: index.html  manifest.json
gui/windows/: CMakeLists.txt
lib/: .todo.md  Cargo.toml
lib/examples/: with_player.rs
lib/src/: instrument.rs  instrument_map.rs  lib.rs  main.rs  mml_event.rs  mml_note.rs  mml_song.rs  mml_track.rs  note.rs  pitch_class.rs  song.rs  test_utils.rs  track.rs  track_event.rs  utils.rs
lib/tests/: common.rs  e2e_with_tempo_change.rs  e2e_without_tempo_change.rs
lib_player/: Cargo.toml  build.rs
lib_player/examples/: play.rs
lib_player/src/: audio.rs  lib.rs  main.rs  mml.rs  mml_event.rs  mml_player.rs  note_event.rs  parser.rs  synth.rs  track_player.rs  utils.rs
lib_player/src/audio/: player.rs  synth.rs
lib_player/src/midi/: event.rs
lib_player/src/mml/: event.rs  parser.rs
lib_player/test_resouces/: .gitattributes  .gitignore  East_West_-_The_Ultimate_Piano_Collection.sf2  Hitchcock.mid  Kiseki.mid  Senbonzakura.mid
lib_player/test_resouces/YDP-GrandPiano-SF2-20160804/: .gitattributes  YDP-GrandPiano-20160804.sf2  YDP-GrandPiano-20160804.txt
lib_player/test_resouces/midi/: Cantarea.mid  Itte.mid  Kirameki_Your_Lie_in_April_ED_.mid  ghost_in_a_flower.mid  rex_incognito.mid
lib_player/test_resources/midi/: Kirameki_Piano_and_Violin_Duet.mid  Lost-one no Gokoku.mid  Milonga.mid  Sir_Duke_Bass_Guitar.mid  The_cat_returns_-_Become_the_wind_-_Kaze_ni_naru.mid  Yoasobi_-_Heart_Beat.mid  _Racing_into_the_NIght_Full_score.mid  always_with_me_flute.mid  itumoHe_Du_demo_Always_with_Me_Simplified_version_for_kids.mid  グッバイ宣言.mid
midi_files/: Fur_Elise.mid  Orange_Your_Lie_in_April.mid  Rush_E.mid
midi_to_mml/: test
midi_to_mml/src/: lib.rs  main.rs  note.rs  song.rs  track.rs  track_event.rs
mml-editor/: package.json
mml_editor/: README.md  flutter_jank_metrics_01.json  flutter_jank_metrics_02.json  flutter_jank_metrics_03.json  flutter_jank_metrics_04.json  generate_rust.sh  pubspec.yaml
mml_editor/native/: Cargo.toml
mml_editor/native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
mml_parser/: analysis_options.yaml  pubspec.yaml
src/: instrument.rs  instrument_map.rs  lib.rs  main.rs  note.rs  song.rs  track.rs  track_event.rs  utils.rs
src/utils/: mod.rs  (+2 more)
(+126 files in other folders)
