[package]
name = "lib_player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
cpal = { git = "https://github.com/sidit77/cpal.git", branch = "master" }
oxisynth = { version = "0.1.0" }
midi-to-mml = { version = "*", path = "../lib" }
rayon = "1.10.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
