[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "1.82.6"
midi-to-mml = { version = "0.1.0", path = "../../midi_to_mml" }

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
