[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.7.0"
prost = "0.12.3"
wasm-bindgen = "0.2.91"
tokio_with_wasm = "0.4.3"
tokio = "1.36.0"
revelation-mobile-midi-to-mml = { version = "0.1.3", path = "../../../lib" }
lib_player = { version = "0.1.0", path = "../../../lib_player" }
once_cell = "1.19.0"
