[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.15.0"
prost = "0.12.6"
tokio = { version = "1", features = ["sync", "rt"] }
revelation-mobile-midi-to-mml = { version = "0.1.3", path = "../../../lib" }
lib_player = { version = "0.1.0", path = "../../../lib_player" }
once_cell = "1.19.0"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
# wasm-bindgen = "0.2.92"
