[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2024"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
wildcard_imports = "deny"

[dependencies]
rinf = "8.0.0"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
async-trait = "0.1.87"
messages = "0.3.1"
midi-to-mml = { version = "*", path = "../../../lib" }
anyhow = "1.0.98"
lib_player = { version = "0.1.0", path = "../../../lib_player" }
rayon = "1.10.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.8.1", features = ["rt", "macros", "time"] }
# wasm-bindgen = "0.2.100"
